portfolio.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}
:root{
    --padding-total:15px 25px;
}
h2{
    font-family: "Poppins" ,sans-serif;
}
a{
    text-decoration: none;
}
body{
    min-height: 100vh;
    display: flex;
    justify-content: center;
    background: url("martin-adams-MpTdvXlAsVE-unsplash.jpg") no-repeat center/ cover;
    background-attachment: fixed;
}

header{
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: center;
    background-color: aquamarine;
    z-index: 1000;
}

.container{
    width: 90%;
    max-width: 1300px;
    border: 1px solid black;
}
nav{
    width: 1300px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 25px 12px;
}
nav h2{
    font-family: "Lato" ,sans-serif;
    color: rgb(17, 77, 31);
}
nav ul {
    display: flex;
}
nav ul li{
    padding:4px 10px;
    font-size: 20px;
    font-family: "Poppins" , sans-serif;
    transition: all 0.1s ease-in;
}
nav ul li:hover{
    border-bottom:3px solid rgb(47, 118, 211);
    color: rgb(47, 118, 211);
}

.container .Home{
    display: flex;
    align-items: center;
    justify-content: space-between;
    height: 500px;
}
#home, #about , #skills , #contact{
    height:100vh ;
}
.intro-text {
   flex: 1;
   max-width: 50%;
   padding :var(--padding-total); 
}
.intro-text h3{
    font-size: 20px;
}
.intro-text h2{
    font-size: 45px;
    margin:5px 0 10px 8px;
    color: #333;
    font-family: "Poppins" ,sans-serif;
}
.intro-text p{
    font-size: 20px;
    line-height: 1.2;
    font-family: "Roboto" ,sans-serif;
    color: #555;
    font-weight: bold;
}
.social-medias{
    padding: 15px 0;
}
.social-medias i {
    margin-right: 10px;
    font-size: 35px;
    transition: all 0.3s ease;
    cursor: pointer;
    opacity: 70%;
}
.social-medias i:hover{
    transform: scale(1.3);
    opacity: 100%;
}

.home-image{
    flex: 1;
    display: flex;
    justify-content: center;
    align-items: center;
}
.home-image img{
    width: 300px;
    height: 300px;
    border-radius:50% ;
    border: 2px solid #cbd1d6;
    object-fit: cover;
}
/* About me section */
.About{
    border: 1px solid #333;
    padding: var(--padding-total);
    font-size: 18px;
}
.About p{
    line-height: 1.2;
    margin-bottom: 10px;
}
.About .btn{
    padding: 8px 15px;
    display: inline;
    border: 0;
    border-radius: 8px;
    cursor: pointer;
    margin-right: 5px;
    font-size: "Poppins" sans-serif;
    font-size: 15px;
}
.btn.resume{
    background-color: #333;
    color: #ddd;
}
.btn.contact{
    background-color: #ddd;
    color: #333;
}
.Skills{
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-items: center;
    padding: var(--padding-total);
}
.skills-icons{
    display: flex;
    flex-direction: row;
    padding: 10px;
}
.skills-icons i {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 10px;
    width: 80px;
    height: 80px;
    font-size: 50px;
    border: 1px solid black;
    border-radius: 5px;
    transition: all 0.5s ease;
    cursor: pointer;
}
.skills-icons i:hover{
    transform: translateY(-15px);
}
#skill-name{
    transition: all 0.5s ease;
    font-family: 'Roboto' , sans-serif;
}
.bxl-css3 {
    color: #1572B6;
}
.bxl-css3:hover {
    color: #FFFFFF;
    background-color: #1572B6;
}

.bxl-javascript {
    color: #F7DF1E;
}
.bxl-javascript:hover {
    color: #FFFFFF;
    background-color: #F7DF1E;
}

.bxl-html5 {
    color: #E34F26;
}
.bxl-html5:hover {
    color: #FFFFFF;
    background-color: #E34F26;
}

.bxl-python {
    color: #3776AB;
}
.bxl-python:hover {
    color: #FFFFFF;
    background-color: #3776AB;
}

.bxl-react {
    color: #61DAFB;
}
.bxl-react:hover {
    color: #000000;
    background-color: #61DAFB;
}

.bxl-tailwind-css {
    color: #06B6D4;
}
.bxl-tailwind-css:hover {
    color: #FFFFFF;
    background-color: #06B6D4;
}
.projects{
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 30px;
    border: 1px solid #333;
    padding: var(--padding-total);
}
.container-projects{
    display: grid;
    grid-template-columns: repeat(4,1fr);
    gap: 25px;
    padding: 10px 20px;
    margin-top: 20px;
}
.box-project{
    position: relative;
    width: 250px;
    height: 250px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 15px;
    cursor: pointer;
    overflow: hidden;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
}
.project-details{
    position: absolute;
    top: -100%;
    left: 0;
    width: 100%;
    height: 100%;
    color: #fff;
    background: rgba(0, 0, 0, 0.5);
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    transition: all 0.7s ease;
}
.project-details a {
    font-size: 40px;
    margin: 10px;
    color: #ddd;
    opacity: 60%;
    transition: all 0.3s ease;
}
.project-details a:hover{
    opacity: 100%;
    transform: scale(1.1)
}
.project-details i{
    font-size: 40px;
    margin: 10px;
}
.project-details h3{
    text-transform:uppercase;
    font-size: 15px;
    font-family: "Poppins" , sans-serif;
}
.box-project img{
    object-fit: cover;
    width: 300px;
    height: 300px;
    border-radius: 15px;
}
.box-project:hover{
    transform: scale(1.1)
}
.box-project:hover .project-details{
    top: 0;
}
/* contact section */
.contact{
    display: flex;
    justify-content: center;
    align-items: center;
    padding: var(--padding-total);
}
.form-contact{
    display: grid;
    width: 80%;
    max-width: 1100px;
    grid-template-columns: 2fr 1fr;
    border: 1px solid #333;
    background-color: #F0F8FF;
    border-radius: 10px;
    box-shadow:  8px -2px 10px 2px rgba(0, 0, 0, 0.1);
}
.get-in-touch{
    display: flex;
    border-right: 1px solid #333;
    flex-direction: column;
    align-items: start;
    padding: 20px 15px;
}
.get-in-touch h2{
    font-family: "Poppins" , sans-serif;
    margin: 8px 0;
}
.get-in-touch .box{
    position: relative;
    width: 100%;
}
.get-in-touch i{
    position: absolute;
    right: 2px;
    padding: 0 10px;
    top: 50%;
    font-size: 20px;
    transform: translateY(-50%);
    color: #d85148;
    font-weight: bold;
}
.get-in-touch input{
    width: 100%;
    margin: 10px 0;
    outline: none;
    border: none;
    border-radius: 5px;
    padding: 10px 12px;
    background-color: #ddd;
    font-family: "Roboto" ,sans-serif;
    font-size: 13px;

}
.get-in-touch textarea{
    width: 75%;
    height: 100px;
    margin-top: 20px;
    outline: none;
    border: none;
    border-radius: 10px;
    padding: 10px 12px;
    background-color: #ddd;
    font-family: "Roboto" ,sans-serif;
    font-size: 13px;
}
.get-in-touch button{
    width: 100%;
    padding: var(--padding-total);
    margin-top: 15px;
    border: none;
    border-radius: 18px;
    background-color: #d85148;
    color: #fff;
    font-family: "Poppins" , sans-serif;
    opacity: 90%;
}
.get-in-touch button:hover{
    opacity: 100%;
    letter-spacing: 1px;
    font-weight: bold;
}
.container-info{
    display: flex;
    justify-content: center;
    align-items: center;
   

    
}
.informations{
    width: 90%;
}
.informations .box{
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: start;
    justify-content: center;
    padding: 5px 5px 10px 0px;
    width: 80%;
    border-bottom: 1px solid #a07d7d;
    margin-left: 2px;
    
}
.location , .phoneNumber , .emailAddress{
    padding: 20px 0;
    position: relative;
    display: flex;
    justify-content: end;
}
.location i , .phoneNumber i , .emailAddress i{
    position: absolute;
    left: 7px;
    top: 25%;
    border: 2px solid red;
    color: red;
    font-size: 20px;
    border-radius: 50%;
    padding: 10px;
}
.footer{
    border: 1px solid #333;
    position: relative;
    padding: var(--padding-total);
    text-align: center;
}
.footer p{
    font-family: "Poppins" ,sans-serif;
    font-weight:500;
}
#backToUp {
    border: none;
    position: fixed;
    bottom: 18px;
    right: 20px;
    display: none;
    border-radius: 50%;
    padding: 7px;
    background-color: #fff;
    color:#333;
    font-size: 25px;
    font-weight: bold;
}

